2006-02-28  Germain Garand  <germain@ebooksfrance.org>

        * rendering/render_object.cpp (dirtyFormattingContext): be more efficient with inlineflow objects.
        * rendering/render_block.cpp (layoutBlockChildren): be more efficient with regard to positioned objects relayout. 
        Merge WC margin-collapse regression fix (WC/#3508). 
        (layoutPositionedObjects) Objects with staticX() need a relayout too.
        * rendering/render_canvas.cpp (layout): no need to relayout positioned objects here. This would mark entire branches of the tree 
        as needing a layout, thus stalling update requests in those branches (#116626)

2006-01-14  Allan Sandfeld Jensen <kde@carewolf.com>

        * rendering/render_image.cpp (calcReplacedWidth,calcReplacedHeight):
        Respect both min/max sizes and aspect-ratio when resizing.

2006-01-03  Allan Sandfeld Jensen <kde@carewolf.com>

        * css/cssparser.cpp: Allow content: normal | none
        * css/cssstyleselector.cpp: Handle content: normal | none

2005-12-09  Germain Garand  <germain@ebooksfrance.org>

        implement quirky HTML alignment ; introduce special float values
        -khtml-left/-khtml-right to this effect.

        * css/cssparser.cpp: ditto. Fix memory leak from Function struct deletion also.
        * css/cssstyleselector.cpp: ditto.
        * css/html4.css: set as default style for table[align="left/right"]
        * html/html_tableimpl.cpp (parseAttribute): remove setting of float property
        * rendering/render_block{h,cpp}: quirky HTML alignment never clears, and never cause fafs to clear.
          Only examine the last floating object on line, so as to match MSIE behaviour.
        * rendering/render_style.h: extra float enumeration values
        * css/css_renderstyledeclarationimpl.cpp (getPropertyCSSValue): adjust

2005-12-06  Dirk Mueller  <mueller@kde.org>

	* html/htmltokenizer.cpp: don't treat <!---> specially.
        fixes bug 93799.
